fix location input on mobile

--- a/src/components/inputs/location-input/location-input.scss
+++ b/src/components/inputs/location-input/location-input.scss
@@ -1,4 +1,8 @@
 .location-input-container {
+  display: flex;
+  flex: 1 1 0;
+  min-width: 0;
+
   .fa.fa-map-marker {
     width: 20px;
     text-align: left;
